# csx

./: CMakeLists.txt
example/: helloworld.csx
include/: lexer.h
src/: lexer.c  main.c
test/: test_lexer.c
